[package]
name = "bricks"
version = "0.1.0"
edition = "2018"
authors = ["Yashasvi Sriram <yash.3997@gmail.com>"]

[dependencies]
rand = "0.8.4"
ordered-float = "2.8.0"
bevy = { version = "0.5.0", features = ["dynamic"] }
bevy_fly_camera = "0.7.0"
nalgebra = { version = "0.29.0", features = ["mint"] }
