[package]
name = "bricks"
version = "0.0.0"
edition = "2021"
authors = ["Yashasvi Sriram Patkuri <yash.3997@gmail.com>"]

[dependencies]
rand = "0.8.4"
ordered-float = "2.8.0"
nalgebra = { version = "0.30.1", features = ["mint"] }
bevy = "0.5.0"
bevy_fly_camera = "0.7.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
url = "2.1.0"
tungstenite = "0.17.2"
tui = "0.18.0"
crossterm = "0.23"
